gymlog/static/css/exercise.css
@import 'colours.css';

body {
  font-family: sans-serif;
  color: var(--fg);
  background-color: var(--bg-1);
  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='28' height='49' viewBox='0 0 28 49'%3E%3Cg fill-rule='evenodd'%3E%3Cg id='hexagons' fill='%231d2021' fill-opacity='0.3' fill-rule='nonzero'%3E%3Cpath d='M13.99 9.25l13 7.5v15l-13 7.5L1 31.75v-15l12.99-7.5zM3 17.9v12.7l10.99 6.34 11-6.35V17.9l-11-6.34L3 17.9zM0 15l12.98-7.5V0h-2v6.35L0 12.69v2.3zm0 18.5L12.98 41v8h-2v-6.85L0 35.81v-2.3zM15 0v7.5L27.99 15H28v-2.31h-.01L17 6.35V0h-2zm0 49v-8l12.99-7.5H28v2.31h-.01L17 42.15V49h-2z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
  margin: 0 auto;
  max-width: 80ch;
  -webkit-font-smoothing: antialiased;
}
section {
  margin: 1rem;
}

#header {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  background-color: var(--bg-s);
  box-shadow: var(--big-shadow);
  z-index: 1;
  font-size: 1.3rem;
  max-width: calc(80ch / 1.3);
  margin: 0 auto;
}
h1 {
  padding: .7rem;
  margin: 0;
  font-weight: 400;
  text-align: center;
}
#header a {
  height: 2rem;
  width: 2rem;
  margin: 5px;
  background-color: var(--fg);
  border-radius: var(--mid-radius);
  display: flex;
  align-items: center;
  justify-content: center;
}
#workout-shortcut {
  color: var(--workout-color);
  position: absolute;
  top: .7rem;
  left: .7rem;
}
#workout-shortcut svg {
  width: 75%;
  height: 75%;
}
#home-shortcut {
  position: absolute;
  top: .7rem;
  left: calc(.7rem + .7rem + 2rem);
}
#home-shortcut svg {
  width: 100%;
  height: 100%;
}

.hidden {
  display: none;
}

#offline {
  background-color: var(--red);
  text-align: center;
  position: absolute;
  bottom: 0;
  left: 0;
  right: 0;
  border-radius: 0 0 var(--mid-radius) var(--mid-radius);
}

#stats {
  margin-top: 4.7rem;
  height: 11rem;
  border-radius: var(--mid-radius);
  padding-top: .5rem;
  display: grid;
  grid-template-columns: repeat(5, 1fr);
  grid-template-areas: 
    "a a a b b"
    "c c d d d";
  grid-gap: .5rem;
}
#stats .stat {
  padding: .25rem .75rem 1rem;
  background-color: var(--bg-colour);
  border-radius: var(--mid-radius);
  height: 3.5rem;
  box-shadow: var(--big-shadow);
}
#stats .stat .stat-heading {
  display: block;
  font-size: .9rem;
  color: var(--bg-s);
}
#stats .stat .stat-value {
  display: block;
  font-size: 2.25rem;
  color: var(--bg);
}
#stats #last-set {
  grid-area: a;
}
#stats #last-workout {
  grid-area: b;
}
#stats #one-rep-max {
  grid-area: c;
}
#stats #aggregate {
  grid-area: d;
}
#stats #last-set.small-font .stat-value {
  font-size: 1.75rem;
  position: relative;
  top: 0.25rem;
}

#graph {
  position: relative;
  height: 14.5rem;
  direction: rtl;
  background-color: var(--bg);
  border-radius: var(--mid-radius);
  box-shadow: var(--big-shadow);
  border: 1px solid var(--bg-1);
}
#graph .graph-chart {
  height: 100%;
  display: flex;
  justify-content: flex-start;
  gap: 10px;
  padding: 1rem 1rem 1rem 0;
  border-left: 1rem solid var(--bg);
  overflow-x: scroll;
  box-sizing: border-box;
}
#graph .graph-group {
  display: flex;
  align-items: flex-end;
  gap: 3px;
}
#graph .graph-bar {
  position: relative;
  width: 6px;
  height: calc(100% * var(--size));
  background-color: var(--workout-color);
  border-radius: var(--small-radius);
}
#graph .graph-bar-today {
  background-color: var(--fg);
}
#graph h2 {
  font-size: 1.5rem;
  font-weight: normal;
  margin: 0.5rem 1rem;
  position: absolute;
  left: 0;
  top: 0;
}

#todays-sets {
  height: 18rem;
  background-color: var(--bg);
  border-radius: var(--mid-radius);
  padding: .5rem;
  position: relative;
  box-shadow: var(--big-shadow);
  border: 1px solid var(--bg-1);
}
#todays-sets .sets {
  max-height: 12rem;
  overflow-y: auto;
}
#todays-sets h2 {
  font-size: 1.5rem;
  font-weight: normal;
  margin: 0 1rem;
}
#todays-sets form {
  display: flex;
  justify-content: space-between;
  margin: 1rem;
  margin-bottom: 1.5rem;
  padding: 2px;
  font-size: 1.5rem;
}
#todays-sets form > div {
  display: flex;
}
#todays-sets .new-input {
  margin-right: 1rem;
}
#todays-sets input {
  color: var(--fg);
  text-align: right;
  width: 4ch;
  font-size: 1.5rem;
  background-color: transparent;
  border: 2px solid var(--blue-alt);
  border-radius: var(--small-radius);
}
#todays-sets input:invalid {
  background-color: var(--red);
}
#todays-sets input.time-input {
  width: 2ch;
}
#todays-sets .fab {
  margin-right: 1rem;
  margin-top: -.5rem;
  font-size: 2rem;
  height: 3rem;
  width: 3rem;
  border-radius: var(--mid-radius);
  border: none;
  color: var(--bg);
  background-color: var(--fg);
  box-shadow: var(--big-shadow);
}

#todays-sets .set-card {
  display: flex;
  justify-content: space-between;
  margin: 0.5rem 1rem;
  padding: 0.25rem 0.5rem;
  font-size: 1rem;
  box-shadow: var(--small-shadow);
  background-color: var(--bg-2);
  border-radius: var(--small-radius);
  border: 1px solid var(--bg-4);
}
#todays-sets .set-card h3 {
  display: inline-block;
  margin: 0;
  font-weight: normal;
}
#todays-sets .set-card small {
  font-style: italic;
  font-size: .8rem;
  display: inline-block;
  vertical-align: bottom;
}
#todays-sets .set-card span {
  width: fit-content;
  text-align: right;
}
#todays-sets .set-card .delta {
  display: inline-block;
  width: fit-content;
  color: var(--fg);
  border-radius: var(--mid-radius);
  border: 1px solid var(--fg-3);
  padding: 0 0.5rem;
  font-size: 1rem;
  position: relative;
  top: -1px;
  margin-left: 0.25rem;
}
#todays-sets .set-card .increase {
  background-color: var(--green-blend);
}
#todays-sets .set-card .decrease {
  background-color: var(--red-blend);
}

#todays-sets .offline-card {
  display: flex;
  justify-content: space-between;
  margin: 0.5rem 1rem;
  padding: 0.25rem 0.5rem;
  font-size: 1rem;
  box-shadow: var(--small-shadow);
  background-color: var(--bg-2);
  border: 1px solid var(--red);
  border-radius: var(--small-radius);
}
#todays-sets .offline-card img {
  margin-left: 1rem;
  padding-bottom: 4px;
  height: 1.2em;
  width: 1.2em;
  vertical-align: middle;
}
#todays-sets .offline-card h3 {
  display: inline-block;
  margin: 0;
  font-weight: normal;
}
#todays-sets .no-sets {
  text-align: center;
}

#todays-sets .timer {
  display: flex;
  justify-content: space-between;
  align-items: center;
  border-radius: var(--big-radius);
  margin: 1rem;
  background-color: var(--bg-s);
}
#todays-sets .timer.running {
  background-color: var(--blue);
}
#todays-sets .timer.paused{
  background-color: var(--blue-blend);
}
#todays-sets .timer-btn {
  display: flex;
  align-items: center;
  justify-content: center;
  transition: scale 250ms;
  margin: 0;
}
#todays-sets .timer-btn:active {
  scale: 1.1;
}
#todays-sets .timer-btn img {
  height: 2rem;
  width: auto;
}
#todays-sets .timer span {;
  font-size: 2rem;
  font-family: monospace;
}
#todays-sets .timer span.millis {
  font-size: 1rem;
}

.save-success {
  background-color: var(--green-alt) !important;
}
.save-error {
  background-color: var(--red) !important;
  rotate: 45deg;
}

/* Dialog specific styles */
dialog::backdrop {
  /* Backdrop does not inherit from any element so cannot use CSS variables.
  https://fullscreen.spec.whatwg.org/#::backdrop-pseudo-element
  */
  background-color: #32302f66;
  backdrop-filter: blur(2px);
}
dialog[open] {
  animation: show .1s ease-out normal;
}
@keyframes show {
  from {transform: translateY(-100%);}
  to {transform: translateY(0%);}
}
#edit-set-dialog {
  width: 85vw;
  max-width: 70ch;
  color: var(--bg);
  background-color: var(--fg);
  border: none;
  margin-top: 2vh;
  border-radius: .2rem;
}
h2 {
  font-size: 1rem;
  margin: 0 0 .5rem 0;
}
.edit-set-input {
  width: 100%;
}
.edit-set-input label {
  margin-top: .5rem;
  display: block;
  font-size: .8rem;
  color: var(--bg);
}
.edit-set-input input,
.edit-set-input select {
  box-sizing: border-box;
  font-size: 1.1rem;
  border: none;
  border-radius: .2rem;
  padding: .5rem;
  background-color: var(--blue-alt);
  color: var(--bg);
  width: 100%;
  word-break: break-word;
}
.edit-set-input .time-input {
  width: 5ch;
}

#edit-set-dialog .buttons {
  margin-top: 1rem;
  text-align: right;
  display: flex;
  flex-direction: row-reverse;
}
#edit-set-dialog button {
  font-family: sans-serif;
  font-size: 1rem;
  text-align: center;
  border: 1px solid var(--purple-alt);
  border-radius: .25rem;
  padding: .5rem .8rem;
  margin: 0 .2rem;
  background-color: var(--purple);
}

